--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,6 @@
         }
     },
     "scripts": {
-
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
@@ -59,6 +58,5 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-
+    "prefer-stable": true
 }
