--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:jHCBgsF4t7ZV9XiEl4NqASZxNwcrW7aqXZbd1urO0iY=
 APP_DEBUG=true
 APP_URL=http://localhost
