--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=production
-APP_KEY=base64:jHCBgsF4t7ZV9XiEl4NqASZxNwcrW7aqXZbd1urO0iY=
+APP_ENV=local
+APP_KEY=base64:njV8LDk4oDqjYVmlgYvekxwC1lotqsaP3gfSrOahcSk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -35,10 +35,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=AKIAWOYTEYEULNG74OUC
-AWS_SECRET_ACCESS_KEY=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
-AWS_DEFAULT_REGION=eu-west-1
-AWS_BUCKET=collabpal
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
