--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=35.242.142.193
 DB_PORT=3306
 DB_DATABASE=collabpal
-DB_USERNAME=root
+DB_USERNAME=test
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
