--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=35.242.142.193
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=collabpal
-DB_USERNAME=test
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=markred123@gmail.com
+MAIL_PASSWORD=markred1234
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=markred123@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=AKIAWOYTEYEULNG74OUC
