--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ AWS_SECRET_ACCESS_KEY=nR0vtspBXGrHKyCreyUn7++L97xm0sEp4f4sfzCC
 AWS_DEFAULT_REGION=eu-west-1
 AWS_BUCKET=collabpal
 
-PUSHER_APP_ID=s
+PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
