--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Collabpal
 APP_ENV=local
 APP_KEY=base64:njV8LDk4oDqjYVmlgYvekxwC1lotqsaP3gfSrOahcSk=
 APP_DEBUG=true
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=35.242.142.193
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=collabpal
-DB_USERNAME=test
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
