--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Collabpal
 APP_ENV=local
 APP_KEY=base64:njV8LDk4oDqjYVmlgYvekxwC1lotqsaP3gfSrOahcSk=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
